--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -270,6 +270,8 @@ CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_CPU_AVS is not set
 # CONFIG_MSM_HW3D is not set
+CONFIG_AMSS_7X25_VERSION_2009=y
+# CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_QDSP6=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
@@ -861,7 +863,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 CONFIG_TOUCHSCREEN_MSM_LEGACY=y
 CONFIG_ANDROID_TOUCHSCREEN_MSM_HACKS=y
-# CONFIG_TOUCHSCREEN_CY8CTMA300 is not set
+# CONFIG_TOUCHSCREEN_CY8C_TS is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -1037,6 +1039,7 @@ CONFIG_TPS65023=y
 # Graphics support
 #
 CONFIG_MSM_KGSL=y
+# CONFIG_MSM_KGSL_2D is not set
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 # CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
