--- a/arch/arm/configs/qsd8650a-perf_defconfig
+++ b/arch/arm/configs/qsd8650a-perf_defconfig
@@ -270,6 +270,8 @@ CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_HW3D is not set
+CONFIG_AMSS_7X25_VERSION_2009=y
+# CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_QDSP6=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
@@ -516,11 +518,6 @@ CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_IEEE802154 is not set
 # CONFIG_NET_SCHED is not set
 # CONFIG_DCB is not set
-#
-#
-# Graphics support
-CONFIG_MSM_KGSL=y
-CONFIG_MSM_KGSL_MMU=y
 
 #
 # Network testing
@@ -1055,6 +1052,11 @@ CONFIG_TPS65023=y
 #
 # Graphics support
 #
+CONFIG_MSM_KGSL=y
+# CONFIG_MSM_KGSL_2D is not set
+CONFIG_MSM_KGSL_MMU=y
+# CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
+# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
@@ -1825,6 +1827,7 @@ CONFIG_CRC32=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_DECOMPRESS_GZIP=y
+CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
