--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -270,6 +270,8 @@ CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_HW3D=y
+CONFIG_AMSS_7X25_VERSION_2009=y
+# CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_QDSP6=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
