--- a/arch/arm/configs/msm7627_defconfig
+++ b/arch/arm/configs/msm7627_defconfig
@@ -265,6 +265,9 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
+CONFIG_ADSP_RPC_VER=0x30002
+CONFIG_AMSS_7X25_VERSION_2009=y
+# CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_ADSP_REPORT_EVENTS=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
@@ -844,7 +847,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 CONFIG_TOUCHSCREEN_MSM_LEGACY=y
 CONFIG_ANDROID_TOUCHSCREEN_MSM_HACKS=y
-# CONFIG_TOUCHSCREEN_CY8CTMA300 is not set
+# CONFIG_TOUCHSCREEN_CY8C_TS is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
