--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -1042,7 +1042,7 @@ CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_2D is not set
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
-# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
+CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
