msm: 8x60: enable CONFIG_DEBUG_GPIO.
Enable CONFIG_DEBUG_GPIO to turn on warning messages for
drivers which use the incorrect gpiolib APIs for gpio chips
which may sleep.

Change-Id: I05e32ae1becc7db770e5603b67c89d60e5f863c8
Signed-off-by: Gregory Bean <gbean@codeaurora.org>

--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -892,7 +892,7 @@ CONFIG_I2C_SSBI=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-# CONFIG_DEBUG_GPIO is not set
+CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 
 #
