msm: 8x60: rename tlmm.c to tlmm-msm8660.c.
Rename tlmm.c to tlmm-msm8660.c in order to make room for upcoming changes:
- The separation of 8x60 gpio-specific functionality into a driver,
paralleling work recently completed on uniprocessor targets;
- The relocation of 8x60 tlmm-specific code into tlmm.c and out
of gpio-v2.c;
- The retiring of the (by this point, empty) gpio-v2.c;
- The creation of tlmm-msm7200a.c for tlmm-specific code for 7200a-family
chipsets (those using the msm7200a-gpio driver);
- And the eventual retiring of gpio.c and generic_gpio.c.

Change-Id: I5b1de0f28b2c4a3f4d8d3b0589f5f62a94f2153d
Signed-off-by: Gregory Bean <gbean@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -48,6 +48,7 @@ config ARCH_MSM8X60
 	select ARCH_REQUIRE_GPIOLIB
 	select MSM_ADM3
 	select REGULATOR
+	select MSM8660_TLMM
 
 endchoice
 
@@ -1112,3 +1113,5 @@ config SMMU_PGTABLES_L2
 	 Most people can probably say Y here.
 endif
 
+config MSM8660_TLMM
+       bool
