msm: qsd8x50a-st1x: Change defconfig options to use graphics hw
Enable the graphics hw option in _defconfig file of
8650a

Change-Id: I7cf23de38761d7b2da78393bce2ef77ea167374a
Signed-off-by: Shubhraprakash Das <sadas@codeaurora.org>

--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -269,7 +269,7 @@ CONFIG_MSM_RPCSERVER_HANDSET=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_HW3D=y
+# CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM_QDSP6=y
@@ -516,6 +516,11 @@ CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_IEEE802154 is not set
 # CONFIG_NET_SCHED is not set
 # CONFIG_DCB is not set
+#
+#
+# Graphics support
+CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_MMU=y
 
 #
 # Network testing
