msm: msm7200a-gpio: Move msm7200a-gpio to mach-msm.
Code-review feedback while upstreaming this driver into 2.6.36
caused it to be moved from drivers/gpio into arch/arm/mach-msm.
Move these files to reflect their correct positions upstream.

Change-Id: Icb0f95c91a61e251a043a7e2b1b89bd9e66ed388
Signed-off-by: Gregory Bean <gbean@codeaurora.org>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -133,4 +133,7 @@ obj-$(CONFIG_ARCH_MSM7X30) += spm.o
 
 obj-$(CONFIG_SMMU)		+= smmu_driver.o smmu_driver_enum.o
 obj-$(CONFIG_SMMU_8X60)		+= board-msm8x60-smmu.o
+ifdef CONFIG_GPIOLIB
+obj-$(CONFIG_MSM7200A_TLMM)	+= msm7200a-gpio.o
+endif
 obj-$(CONFIG_MSM8660_TLMM)	+= tlmm-msm8660.o msm8660-gpio.o
