--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -24,6 +24,7 @@ config ARCH_MSM7X27
 	select MSM_VIC
 	select CPU_V6
 	select MSM_REMOTE_SPINLOCK_SWP
+	select MSM7200A_TLMM
 
 config ARCH_MSM7X30
 	bool "MSM7x30"
@@ -31,6 +32,7 @@ config ARCH_MSM7X30
 	select MSM_VIC
 	select CPU_V7
 	select MSM_REMOTE_SPINLOCK_DEKKERS
+	select MSM7200A_TLMM
 
 config ARCH_QSD8X50
 	bool "QSD8X50"
@@ -38,6 +40,7 @@ config ARCH_QSD8X50
 	select MSM_VIC
 	select CPU_V7
 	select MSM_REMOTE_SPINLOCK_LDREX
+	select MSM7200A_TLMM
 
 config ARCH_MSM8X60
 	bool "MSM8X60"
@@ -1112,6 +1115,9 @@ config SMMU_PGTABLES_L2
 	 Improves page fault latency at the expense of potential L2 pollution.
 	 Most people can probably say Y here.
 endif
+
+config MSM7200A_TLMM
+       bool
 
 config MSM8660_TLMM
        bool
