msm: tlmm: Move tlmm functions to tlmm-msm7200a.c.
Move tlmm-msm7200a-specific functions out of gpio.c and into
tlmm-msm7200a.c.  Since gpio.c and generic-gpio.c are soon to
be disabled on many targets, and tlmm is soon to become a driver
in its own right, these functions need to get out of gpio-specific
files and into their own.  This move parallels the move
of the msm8660-specific tlmm functions into tlmm-msm8660.c.

Change-Id: I07ad6ffd270a42a4a443b7276a26075740d470ec
Signed-off-by: Gregory Bean <gbean@codeaurora.org>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -13,8 +13,8 @@ ifndef CONFIG_ARCH_MSM8X60
 	endif
 endif
 
-obj-$(CONFIG_ARCH_MSM_ARM11) += acpuclock.o timer.o gpio.o generic_gpio.o
-obj-$(CONFIG_ARCH_MSM_SCORPION) += timer.o gpio.o generic_gpio.o
+obj-$(CONFIG_ARCH_MSM_ARM11) += acpuclock.o timer.o
+obj-$(CONFIG_ARCH_MSM_SCORPION) += timer.o
 obj-$(CONFIG_ARCH_MSM_SCORPIONMP) += timer.o
 
 obj-$(CONFIG_MSM_VIC) += irq-vic.o
@@ -135,5 +135,8 @@ obj-$(CONFIG_SMMU)		+= smmu_driver.o smmu_driver_enum.o
 obj-$(CONFIG_SMMU_8X60)		+= board-msm8x60-smmu.o
 ifdef CONFIG_GPIOLIB
 obj-$(CONFIG_MSM7200A_TLMM)	+= msm7200a-gpio.o
+else
+obj-$(CONFIG_MSM7200A_TLMM)	+= gpio.o generic_gpio.o
 endif
+obj-$(CONFIG_MSM7200A_TLMM)	+= tlmm-msm7200a.o
 obj-$(CONFIG_MSM8660_TLMM)	+= tlmm-msm8660.o msm8660-gpio.o
