--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -10,6 +10,7 @@ config ARCH_MSM7X01A
 	select MSM_VIC
 	select CPU_V6
 	select MSM_REMOTE_SPINLOCK_SWP
+	select MSM7200A_TLMM
 
 config ARCH_MSM7X25
 	bool "MSM7x25"
@@ -17,6 +18,7 @@ config ARCH_MSM7X25
 	select MSM_VIC
 	select CPU_V6
 	select MSM_REMOTE_SPINLOCK_SWP
+	select MSM7200A_TLMM
 
 config ARCH_MSM7X27
 	bool "MSM7x27"
