MSM: Re-add camera to Kconfig, dropped it during one of the V4L merges

--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -893,4 +893,13 @@ config USB_S2255
 
 endif # V4L_USB_DRIVERS
 
+comment "MSM Camera And Video"
+
+menuconfig MSM_CAMERA
+        bool "MSM camera and video capture support"
+        depends on VIDEO_V4L2
+        ---help---
+          Say Y here to enable selecting the video adapters for
+          MSM camera and video encoding
+
 endif # VIDEO_CAPTURE_DRIVERS
