camera: Disable camera flash on 8x60
As there is no support for led flash is pmic disabling camera
flash on 8x60.

Change-Id: I086549a3257b8909b2f966f8c0e40c63103aafa6
Signed-off-by: Ninad Patgaonkar <ninadp@codeaurora.org>

--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -65,7 +65,7 @@ config VB6801
 
 config MSM_CAMERA_FLASH
 	bool "Qualcomm MSM camera flash support"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !ARCH_MSM8X60
 	default y
 	---help---
 	  Enable support for LED flash for msm camera
