--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -555,6 +555,19 @@ config ARCH_MSM
 	  interface to the ARM9 modem processor which runs the baseband stack
 	  and controls some vital subsystems (clock and power control, etc).
 
+config ARCH_QSD
+	bool "Qualcomm QSD"
+	select GENERIC_GPIO
+	select HAVE_CLK
+	select GENERIC_TIME
+	select GENERIC_CLOCKEVENTS
+	help
+	  Support for Qualcomm QSD based systems.  This runs on
+	  the Scorpion apps processor of the QSD and depends on a shared
+	  memory interface to the ARM9 modem processor which runs the baseband
+	  stack and controls some vital subsystems (clock and power control,
+	  etc).
+
 endchoice
 
 source "arch/arm/mach-clps711x/Kconfig"
