--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -283,6 +283,7 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 # CONFIG_MSM_NPA is not set
 # CONFIG_SMMU is not set
+CONFIG_MSM8660_TLMM=y
 
 #
 # Processor Type
@@ -509,11 +510,6 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 # CONFIG_IEEE802154 is not set
 # CONFIG_NET_SCHED is not set
 # CONFIG_DCB is not set
-
-# Graphics support
-CONFIG_MSM_KGSL=y
-CONFIG_MSM_KGSL_MMU=y
-CONFIG_MSM_KGSL_2D=y
 
 #
 # Network testing
@@ -1057,6 +1053,11 @@ CONFIG_REGULATOR_PMIC8901=y
 #
 # Graphics support
 #
+CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_2D=y
+CONFIG_MSM_KGSL_MMU=y
+# CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
+# CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -1851,6 +1852,7 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
+CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
