--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -86,6 +86,14 @@ config MACH_TROUT
 	default y
 	bool "Trout"
 
+config MACH_ADQ
+	depends on ARCH_MSM
+	depends on !MSM_STACKED_MEMORY
+	default y
+	bool "FIH ADQ"
+	help
+	  Support for the Foxconn ADQ board (Commtiva Z1/GP ONE/HS Zeus)
+
 config MACH_MSM7X25_SURF
 	depends on ARCH_MSM
 	depends on !MSM_STACKED_MEMORY
