msm: defconfig: Enable GPIOLIB by default.
The deadline has arrived! Enable GPIOLIB on all affected
7200a-descended targets.

Change-Id: I87a514da632edc0f8f157c8eaa4bfdf67f691449
Signed-off-by: Gregory Bean <gbean@codeaurora.org>

--- a/arch/arm/configs/msm7630-perf_defconfig
+++ b/arch/arm/configs/msm7630-perf_defconfig
@@ -301,6 +301,7 @@ CONFIG_MSM_NPA_REMOTE=y
 CONFIG_MSM_NPA_REMOTE_ONCRPC=y
 # CONFIG_MSM_NPA_PROC_COMM is not set
 # CONFIG_MSM_NPA_SYSTEM_BUS is not set
+CONFIG_MSM7200A_TLMM=y
 
 #
 # Processor Type
@@ -756,6 +757,7 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 # CONFIG_BLK_DEV_XIP is not set
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
+# CONFIG_MG_DISK is not set
 CONFIG_MISC_DEVICES=y
 CONFIG_ANDROID_PMEM=y
 # CONFIG_ANDROID_PMEM_DEBUG is not set
@@ -992,6 +994,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_CM109 is not set
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
+# CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
 # CONFIG_PMIC8058_PWRKEY is not set
 # CONFIG_PMIC8058_OTHC is not set
@@ -1117,7 +1120,36 @@ CONFIG_SPI_MASTER=y
 #
 # CONFIG_PPS is not set
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
-# CONFIG_GPIOLIB is not set
+CONFIG_GPIOLIB=y
+CONFIG_DEBUG_GPIO=y
+CONFIG_GPIO_SYSFS=y
+
+#
+# Memory mapped GPIO expanders:
+#
+
+#
+# I2C GPIO expanders:
+#
+# CONFIG_GPIO_MAX732X is not set
+# CONFIG_GPIO_PCA953X is not set
+# CONFIG_GPIO_PCF857X is not set
+# CONFIG_GPIO_SX150X is not set
+
+#
+# PCI GPIO expanders:
+#
+
+#
+# SPI GPIO expanders:
+#
+# CONFIG_GPIO_MAX7301 is not set
+# CONFIG_GPIO_MCP23S08 is not set
+# CONFIG_GPIO_MC33880 is not set
+
+#
+# AC97 GPIO expanders:
+#
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1213,7 +1245,10 @@ CONFIG_SSB_POSSIBLE=y
 #
 CONFIG_MFD_CORE=y
 # CONFIG_MFD_SM501 is not set
+# CONFIG_MFD_ASIC3 is not set
+# CONFIG_HTC_EGPIO is not set
 # CONFIG_HTC_PASIC3 is not set
+# CONFIG_TPS65010 is not set
 CONFIG_TPS65023=y
 CONFIG_PMIC8058=y
 CONFIG_MARIMBA_TSADC=y
@@ -1221,6 +1256,7 @@ CONFIG_MARIMBA_TSADC=y
 CONFIG_MARIMBA_CORE=y
 CONFIG_MARIMBA_CODEC=y
 # CONFIG_MFD_TMIO is not set
+# CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM831X is not set
