--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -831,6 +831,17 @@ config USB_ANDROID_RNDIS
 	  enabling this option adds RNDIS support to the
 	  android gadget.
 
+config USB_ANDROID_RNDIS_WCEIS
+	boolean "Use Windows Internet Sharing Class/SubClass/Protocol"
+	depends on USB_ANDROID_RNDIS
+	default n
+	help
+	 Causes the driver to look like a Windows-compatible Internet
+	 Sharing device, so Windows auto-detects it
+
+	 If you enable this option, the device is no longer CDC ethernet
+	 compatible.
+
 config USB_ANDROID_RMNET
 	bool "RmNet function driver"
 	depends on USB_ANDROID
