tsif: Merge tsif driver from 2.6.29
This is a squashed version of all the work done on TSIF driver
on 2.6.29 branch.
Low level TSIF (Transport Stream InterFace) driver provides
in-kernel API to be used by upper layer drivers.

Also included an example of upper layer driver that uses TSIF API
and implements character device.

Change-Id: I82898b9aa8a6eee463f2c86976e2164082f415ed
Signed-off-by: Lena Salman <esalman@qualcomm.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -320,6 +320,13 @@ config TSIF_CHRDEV
 	  To compile this driver as module, choose M here: the
 	  module will be called tsif_chrdev.
 
+config TSIF_DEBUG
+	tristate "Turn on debugging information for tsif driver"
+	depends on TSIF
+	default n
+	---help---
+	  This turns on debugging information for the tsif driver
+
 config PMIC8058_PWM
 	tristate "Qualcomm PM8058 PWM support"
 	depends on PMIC8058
