defconfig: automatic update
Signed-off-by: Steve Muckle <smuckle@codeaurora.org>

--- a/arch/arm/configs/msm7630-perf_defconfig
+++ b/arch/arm/configs/msm7630-perf_defconfig
@@ -341,6 +341,7 @@ CONFIG_ARM_L1_CACHE_SHIFT=5
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
+# CONFIG_KSAPI is not set
 
 #
 # Kernel Features
@@ -1394,6 +1395,7 @@ CONFIG_RADIO_TAVARUA=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_KGSL_MMU=y
@@ -1722,6 +1724,7 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_DIAG=y
 CONFIG_USB_ANDROID_CDC_ECM=y
 CONFIG_USB_ANDROID_RNDIS=y
+# CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
 CONFIG_USB_ANDROID_RMNET=y
 CONFIG_RMNET_SMD_CTL_CHANNEL="DATA7_CNTL"
 CONFIG_RMNET_SMD_DATA_CHANNEL="DATA7"
