--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -300,6 +300,7 @@ CONFIG_MSM_NPA_REMOTE=y
 CONFIG_MSM_NPA_REMOTE_ONCRPC=y
 # CONFIG_MSM_NPA_PROC_COMM is not set
 CONFIG_MSM_NPA_SYSTEM_BUS=y
+CONFIG_MSM7200A_TLMM=y
 
 #
 # Processor Type
@@ -339,6 +340,7 @@ CONFIG_ARM_L1_CACHE_SHIFT=5
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
+# CONFIG_KSAPI is not set
 
 #
 # Kernel Features
@@ -1238,6 +1240,7 @@ CONFIG_RADIO_TAVARUA=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_KGSL_MMU=y
