--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -213,6 +213,7 @@ CONFIG_MACH_MSM8X60_SURF=y
 CONFIG_MACH_MSM8X60_FFA=y
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_PHYS_OFFSET=0x40200000
+# CONFIG_KERNEL_PMEM_EBI_REGION is not set
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
@@ -910,7 +911,6 @@ CONFIG_GPIO_SYSFS=y
 #
 # Memory mapped GPIO expanders:
 #
-# CONFIG_GPIO_MSM7200A is not set
 
 #
 # I2C GPIO expanders:
@@ -1053,6 +1053,7 @@ CONFIG_REGULATOR_PMIC8901=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_KGSL_MMU=y
