--- a/arch/arm/configs/msm7627-perf_defconfig
+++ b/arch/arm/configs/msm7627-perf_defconfig
@@ -1156,6 +1156,7 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
@@ -1474,6 +1475,7 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_DIAG=y
 CONFIG_USB_ANDROID_CDC_ECM=y
 CONFIG_USB_ANDROID_RNDIS=y
+# CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
 CONFIG_USB_ANDROID_RMNET=y
 CONFIG_RMNET_SMD_CTL_CHANNEL="DATA7_CNTL"
 CONFIG_RMNET_SMD_DATA_CHANNEL="DATA7"
