--- a/arch/arm/configs/qsd8650a-perf_defconfig
+++ b/arch/arm/configs/qsd8650a-perf_defconfig
@@ -284,6 +284,7 @@ CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 # CONFIG_MSM_NPA is not set
+CONFIG_MSM7200A_TLMM=y
 
 #
 # Processor Type
@@ -323,6 +324,7 @@ CONFIG_ARM_L1_CACHE_SHIFT=5
 # CONFIG_PCI_SYSCALL is not set
 # CONFIG_ARCH_SUPPORTS_MSI is not set
 # CONFIG_PCCARD is not set
+# CONFIG_KSAPI is not set
 
 #
 # Kernel Features
@@ -1052,6 +1054,7 @@ CONFIG_TPS65023=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_2D is not set
 CONFIG_MSM_KGSL_MMU=y
