--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -800,6 +800,7 @@ config USB_G_PRINTER
 
 config USB_ANDROID
 	tristate "Android Gadget"
+	default y
 	help
 	  The Android gadget provides mass storage and adb transport.
 
