Updated ADQ defconfig

--- a/arch/arm/configs/adq_defconfig
+++ b/arch/arm/configs/adq_defconfig
@@ -218,12 +218,12 @@ CONFIG_MSM_DEBUG_UART_NONE=y
 # CONFIG_MSM_DEBUG_UART3 is not set
 # CONFIG_MSM7X00A_USE_GP_TIMER is not set
 CONFIG_MSM7X00A_USE_DG_TIMER=y
-# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
-CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
+CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
+# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_SLEEP_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_SLEEP_MODE=1
+CONFIG_MSM7X00A_SLEEP_MODE=0
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
 CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE=y
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_APPS_SLEEP is not set
@@ -255,7 +255,9 @@ CONFIG_MSM_RPCSERVER_WATCHDOG=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
 # CONFIG_MSM_RMT_STORAGE_SERVER is not set
-# CONFIG_MSM_CPU_FREQ_SCREEN is not set
+CONFIG_MSM_CPU_FREQ_SCREEN=y
+CONFIG_MSM_CPU_FREQ_SCREEN_OFF=245760
+CONFIG_MSM_CPU_FREQ_SCREEN_ON=384000
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
 CONFIG_MSM_ADSP_REPORT_EVENTS=y
@@ -620,9 +622,12 @@ CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_LL is not set
+# CONFIG_BT_HCIUART_IBS is not set
+# CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 CONFIG_BT_FILTER=y
+CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
 # CONFIG_WIRELESS is not set
 CONFIG_WIRELESS_EXT=y
