--- a/arch/arm/configs/adq_defconfig
+++ b/arch/arm/configs/adq_defconfig
@@ -195,6 +195,7 @@ CONFIG_ARCH_MSM7X25=y
 # CONFIG_ARCH_MSM7X27 is not set
 # CONFIG_ARCH_MSM7X30 is not set
 # CONFIG_ARCH_QSD8X50 is not set
+# CONFIG_ARCH_MSM8X60 is not set
 CONFIG_MSM_SOC_REV_NONE=y
 # CONFIG_MSM_SOC_REV_A is not set
 CONFIG_ARCH_MSM_ARM11=y
@@ -237,6 +238,7 @@ CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 # CONFIG_HTC_PWRSINK is not set
 CONFIG_MSM_FIQ_SUPPORT=y
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
+CONFIG_MSM_PROC_COMM=y
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG3=y
 # CONFIG_MSM_SMD_PKG4 is not set
@@ -255,12 +257,12 @@ CONFIG_MSM_RPCSERVER_WATCHDOG=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
 # CONFIG_MSM_RMT_STORAGE_SERVER is not set
-CONFIG_MSM_CPU_FREQ_SCREEN=y
-CONFIG_MSM_CPU_FREQ_SCREEN_OFF=245760
-CONFIG_MSM_CPU_FREQ_SCREEN_ON=384000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
+CONFIG_MSM_ADSP_DEBUG_LEVEL=1
 CONFIG_MSM_ADSP_REPORT_EVENTS=y
+CONFIG_MSM_AUDIO_DEBUG_LEVEL=1
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
 # CONFIG_WIFI_CONTROL_FUNC is not set
@@ -376,6 +378,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_IDLE is not set
+CONFIG_CPU_FREQ_MSM=y
 
 #
 # Floating point emulation
@@ -626,7 +629,6 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-CONFIG_BT_FILTER=y
 CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
 # CONFIG_WIRELESS is not set
@@ -739,9 +741,10 @@ CONFIG_BLK_DEV_LOOP=y
 # CONFIG_BLK_DEV_RAM is not set
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
-# CONFIG_MG_DISK is not set
 CONFIG_MISC_DEVICES=y
 CONFIG_ANDROID_PMEM=y
+# CONFIG_ANDROID_PMEM_DEBUG is not set
+# CONFIG_ANDROID_PMEM_KAPI_TEST is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_KERNEL_DEBUGGER_CORE is not set
@@ -750,6 +753,8 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_WL127X_RFKILL is not set
 CONFIG_APANIC=y
 CONFIG_APANIC_PLABEL="kpanic"
+# CONFIG_TSIF is not set
+# CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -902,7 +907,6 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_CM109 is not set
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
-# CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
 CONFIG_SENSORS_BMA020=y
 
@@ -1016,35 +1020,6 @@ CONFIG_SPI_GPIO=y
 # PPS support
 #
 # CONFIG_PPS is not set
-CONFIG_ARCH_REQUIRE_GPIOLIB=y
-CONFIG_GPIOLIB=y
-# CONFIG_GPIO_SYSFS is not set
-
-#
-# Memory mapped GPIO expanders:
-#
-
-#
-# I2C GPIO expanders:
-#
-# CONFIG_GPIO_MAX732X is not set
-# CONFIG_GPIO_PCA953X is not set
-# CONFIG_GPIO_PCF857X is not set
-
-#
-# PCI GPIO expanders:
-#
-
-#
-# SPI GPIO expanders:
-#
-# CONFIG_GPIO_MAX7301 is not set
-# CONFIG_GPIO_MCP23S08 is not set
-# CONFIG_GPIO_MC33880 is not set
-
-#
-# AC97 GPIO expanders:
-#
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1071,13 +1046,9 @@ CONFIG_SSB_POSSIBLE=y
 #
 # CONFIG_MFD_CORE is not set
 # CONFIG_MFD_SM501 is not set
-# CONFIG_MFD_ASIC3 is not set
-# CONFIG_HTC_EGPIO is not set
 # CONFIG_HTC_PASIC3 is not set
-# CONFIG_TPS65010 is not set
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_MFD_TMIO is not set
-# CONFIG_MFD_TC6393XB is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_WM8400 is not set
 # CONFIG_MFD_WM831X is not set
@@ -1254,11 +1225,11 @@ CONFIG_FB_MSM_MDP30=y
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_LCDC=y
-# CONFIG_FB_MSM_MDDI_2 is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
+# CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -1426,13 +1397,12 @@ CONFIG_MMC_MSM_SDIO_SUPPORT=y
 CONFIG_MMC_MSM_CARD_HW_DETECTION=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 # CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT is not set
-# CONFIG_MMC_MSM_SDC1_DUMMY52_REQUIRED is not set
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
-# CONFIG_MMC_MSM_SDC2_8_BIT_SUPPORT is not set
-# CONFIG_MMC_MSM_SDC2_DUMMY52_REQUIRED is not set
+CONFIG_MMC_MSM_SDC2_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC3_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC4_SUPPORT is not set
-# CONFIG_MMC_MSM_PROG_DONE_SCAN is not set
+# CONFIG_MMC_MSM_SDC5_SUPPORT is not set
+CONFIG_MMC_MSM_PROG_DONE_SCAN=y
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -1447,6 +1417,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_BD2802 is not set
+# CONFIG_LEDS_MSM_PMIC is not set
 
 #
 # LED Triggers
@@ -1521,6 +1492,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 # on-CPU RTC drivers
 #
 CONFIG_RTC_DRV_MSM=y
+# CONFIG_RTC_SECURE_TIME_SUPPORT is not set
 # CONFIG_RTC_DRV_MSM7X00A is not set
 # CONFIG_DMADEVICES is not set
 # CONFIG_AUXDISPLAY is not set
