--- a/arch/arm/configs/adq_defconfig
+++ b/arch/arm/configs/adq_defconfig
@@ -658,6 +658,7 @@ CONFIG_MTD=y
 # CONFIG_MTD_TESTS is not set
 # CONFIG_MTD_CONCAT is not set
 CONFIG_MTD_PARTITIONS=y
+CONFIG_MTD_LAZYECCSTATS=y
 # CONFIG_MTD_REDBOOT_PARTS is not set
 CONFIG_MTD_CMDLINE_PARTS=y
 # CONFIG_MTD_AFS_PARTS is not set
@@ -752,7 +753,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_UID_STAT is not set
 # CONFIG_WL127X_RFKILL is not set
 CONFIG_APANIC=y
-CONFIG_APANIC_PLABEL="kpanic"
+CONFIG_APANIC_PLABEL="misc"
 # CONFIG_TSIF is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_C2PORT is not set
