ADQ: Solve suspend problems
The inability (well, crash) on suspend was being caused by both the old
msm_vibrator (that needed an rpc_pmic layer) and the old handset driver. This
solved the suspend problem, but vibrator and headset still need some heavy
testing to make sure they're OK

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -124,7 +124,7 @@ obj-$(CONFIG_ARCH_MSM7X30) += clock-7x30.o acpuclock-7x30.o
 #obj-$(CONFIG_ARCH_MSM7X25) += board-msm7x27.o devices-msm7x25.o
 obj-$(CONFIG_ARCH_MSM7X25) += board-adq.o devices-adq.o
 
-obj-$(CONFIG_MACH_ADQ) += board-adq-info.o rpc_pmic.o msm_vibrator.o
+obj-$(CONFIG_MACH_ADQ) += board-adq-info.o msm_vibrator.o
 obj-$(CONFIG_MACH_SAPPHIRE) += board-sapphire.o board-sapphire-gpio.o
 obj-$(CONFIG_MACH_SAPPHIRE) += board-sapphire-keypad.o board-sapphire-panel.o
 obj-$(CONFIG_MACH_SAPPHIRE) += board-sapphire-mmc.o board-sapphire-wifi.o
