--- a/arch/arm/configs/adq_defconfig
+++ b/arch/arm/configs/adq_defconfig
@@ -244,16 +244,17 @@ CONFIG_MSM_SMD_PKG3=y
 # CONFIG_MSM_SMD_PKG4 is not set
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_RESET_MODEM=y
-CONFIG_MSM_SMD_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ONCRPCROUTER=y
-# CONFIG_MSM_ONCRPCROUTER_DEBUG is not set
-CONFIG_MSM_RPC_LOOPBACK_XPRT=y
+CONFIG_MSM_ONCRPCROUTER_DEBUG=y
+# CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
 CONFIG_MSM_RPCSERVER_TIME_REMOTE=y
 CONFIG_MSM_RPCSERVER_WATCHDOG=y
+CONFIG_MSM_RPC_WATCHDOG=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT is not set
@@ -277,6 +278,8 @@ CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 CONFIG_MSM_PM_TIMEOUT_RESET_MODEM=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
 # CONFIG_MSM_NPA is not set
+# CONFIG_MSM_DIRECT_SCLK_ACCESS is not set
+CONFIG_MSM7200A_TLMM=y
 
 #
 # Processor Type
@@ -952,7 +955,7 @@ CONFIG_SERIAL_MSM_HS=y
 #
 # Diag Support
 #
-# CONFIG_DIAG_CHAR is not set
+CONFIG_DIAG_CHAR=y
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -1195,6 +1198,7 @@ CONFIG_MSM_CAMERA_AF_FOXCONN=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 # CONFIG_MSM_KGSL is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -1384,6 +1388,7 @@ CONFIG_USB_MSM_OTG_72K=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
@@ -1541,7 +1546,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 #
 # Camera Sensor Selection
 #
-# CONFIG_MT9T013 is not set
+CONFIG_MT9T013=y
 # CONFIG_MT9D112 is not set
 # CONFIG_MT9P012 is not set
 # CONFIG_S5K3E2FX is not set
@@ -1636,6 +1641,7 @@ CONFIG_YAFFS_AUTO_YAFFS2=y
 # CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
 CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
+# CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 # CONFIG_SQUASHFS is not set
@@ -1725,6 +1731,7 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_KERNEL is not set
+# CONFIG_STACKTRACE is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
 CONFIG_FRAME_POINTER=y
